--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/Register.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/Register.fxml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<?import com.SEApp.app.components.*?>
-<VBox alignment="CENTER"
-      prefHeight="239.0"
-      prefWidth="243.0"
-      spacing="20.0"
-      stylesheets="@../Style/main.css"
-      xmlns="http://javafx.com/javafx/21"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.SEApp.app.controller.Register">
-    <fx:include source="../components/Header.fxml"/>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    <!--    <Header />-->
-    <Label styleClass="h1" text="Login" />
-    <Label text="Your login" />
-    <TextField fx:id="email"  />
-    <Label text="Your username" />
-    <TextField fx:id="username"  />
-    <Label text="Your password" />
-    <PasswordField fx:id="password" />
-
-    <Label text="Confirm your password" />
-    <PasswordField fx:id="confirmPassword" />
-
-    <Button onAction="#onRegister" text="Register" />
-
-    <HBox alignment="CENTER" spacing="10.0">
-        <Label text="Fill the form to register" fx:id="error"/>
-    </HBox>
-
-</VBox>
+<SplitPane dividerPositions="0.38294314381270905" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.Register">
+    <items>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="228.0" style="-fx-background-color: #E0FCFC;">
+            <children>
+                <ImageView fitHeight="249.0" fitWidth="214.0" layoutX="6.0" layoutY="92.0" onMouseClicked="#handleHomeButton" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../Images/substrack-logo.png" />
+                    </image>
+                </ImageView>
+                <Label layoutX="6.0" layoutY="306.0" prefHeight="54.0" prefWidth="201.0" />
+            </children></AnchorPane>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="331.0" style="-fx-background-color: #FFA60E;">
+            <children>
+                <Label fx:id="title" layoutX="98.0" layoutY="14.0" prefHeight="30.0" prefWidth="305.0" text="Register">
+                    <font>
+                        <Font name="DejaVu Sans Condensed Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label layoutX="20.0" layoutY="78.0" text="Email" />
+                <Label layoutX="5.0" layoutY="131.0" text="Username" />
+                <TextField fx:id="username" layoutX="80.0" layoutY="127.0" prefHeight="24.0" prefWidth="252.0" promptText="your username" />
+                <Label layoutX="8.0" layoutY="183.0" text="Password" />
+                <PasswordField fx:id="password" layoutX="80.0" layoutY="224.0" prefHeight="24.0" prefWidth="252.0" promptText="Confirm your password" />
+                <TextField layoutX="80.0" layoutY="74.0" prefHeight="24.0" prefWidth="252.0" promptText="email@email.com" />
+                <TextField layoutX="80.0" layoutY="179.0" prefHeight="24.0" prefWidth="252.0" promptText="Your password" />
+                <Button layoutX="154.0" layoutY="314.0" mnemonicParsing="false" onAction="#onRegister" style="-fx-background-color: #24C7E6;" text="Register" />
+                <Hyperlink layoutX="35.0" layoutY="353.0" onAction="#handleLoginMemberButton" prefHeight="22.0" prefWidth="333.0" text="Already have an account? Login here" />
+            <Label layoutX="11.0" layoutY="228.0" prefHeight="16.0" prefWidth="124.0" text="Password" />
+            </children></AnchorPane>
+    </items>
+</SplitPane>
