--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/PaymentTypeManagement.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/PaymentTypeManagement.fxml
@@ -3,51 +3,46 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane prefHeight="400.0"
-           prefWidth="569.0"
-           xmlns="http://javafx.com/javafx/17.0.2-ea"
-           xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.SEApp.app.controller.PaymentTypeController">
+<StackPane prefHeight="400.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.PaymentTypeController">
     <VBox>
         <HBox alignment="TOP_CENTER" prefHeight="47.0" prefWidth="570.0">
-            <fx:include source="../components/Header.fxml"/>
+            <fx:include source="../components/Header.fxml" />
         </HBox>
         <HBox alignment="CENTER" prefHeight="20.0" prefWidth="570.0" stylesheets="@../Style/main.css">
-            <Label styleClass="h1" text="Payment type management"/>
+            <Label styleClass="h1" text="Payment type management" />
         </HBox>
         <ToolBar accessibleRole="BUTTON" prefHeight="40.0" prefWidth="200.0">
-            <Button mnemonicParsing="false" text="Home" onAction="#handleHomeButton"/>
-            <Button mnemonicParsing="false" text="New" onAction="#handleNewButton"/>
+            <Button mnemonicParsing="false" onAction="#handleHomeButton" style="-fx-background-color: #24C7E6;;" text="Home" />
+            <Button mnemonicParsing="false" onAction="#handleNewButton" style="-fx-background-color: #A3E270;;" text="New" />
 
         </ToolBar>
-        <ScrollPane fx:id="displayPane" prefHeight="490.0" prefWidth="570.0"/>
+        <ScrollPane fx:id="displayPane" prefHeight="490.0" prefWidth="570.0" />
     </VBox>
 
-    <VBox alignment="CENTER" prefHeight="400.0" prefWidth="543.0" stylesheets="@../Style/main.css" fx:id="formModal"
-          visible="false">
+    <VBox fx:id="formModal" alignment="CENTER" prefHeight="400.0" prefWidth="543.0" stylesheets="@../Style/main.css" visible="false">
         <HBox alignment="CENTER" prefHeight="331.0" prefWidth="554.0">
             <VBox prefHeight="331.0" prefWidth="387.0" styleClass="modal">
-                <HBox prefHeight="100.0" prefWidth="200.0" fx:id="idArea">
-                    <Label text="Payment type ID : "/>
-                    <Label fx:id="id" text="1"/>
+                <HBox fx:id="idArea" prefHeight="100.0" prefWidth="200.0">
+                    <Label text="Payment type ID : " />
+                    <Label fx:id="id" text="1" />
                 </HBox>
-                <VBox prefHeight="74.0" prefWidth="387.0" styleClass="formControl" fx:id="nameArea">
-                    <Label text="Payment type Name"/>
-                    <TextField prefHeight="21.0" prefWidth="375.0" fx:id="name"/>
+                <VBox fx:id="nameArea" prefHeight="74.0" prefWidth="387.0" styleClass="formControl">
+                    <Label text="Payment type Name" />
+                    <TextField fx:id="name" prefHeight="21.0" prefWidth="375.0" />
                 </VBox>
-                <VBox prefHeight="74.0" prefWidth="387.0" styleClass="formControl" fx:id="descriptionArea">
-                    <Label text="Payment type Email"/>
-                    <TextField prefHeight="21.0" prefWidth="375.0" fx:id="description"/>
+                <VBox fx:id="descriptionArea" prefHeight="74.0" prefWidth="387.0" styleClass="formControl">
+                    <Label text="Payment type Email" />
+                    <TextField fx:id="description" prefHeight="21.0" prefWidth="375.0" />
                 </VBox>
 
                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                    <Button mnemonicParsing="false" onAction="#handleCreation" text="Add"/>
-                    <Button mnemonicParsing="false" onAction="#handleUpdate" text="Update"/>
-                    <Button mnemonicParsing="false" onAction="#closeModal" text="Cancel"/>
+                    <Button mnemonicParsing="false" onAction="#handleCreation" text="Add" />
+                    <Button mnemonicParsing="false" onAction="#handleUpdate" text="Update" />
+                    <Button mnemonicParsing="false" onAction="#closeModal" text="Cancel" />
                 </HBox>
 
                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                    <Label fx:id="message" text=" "/>
+                    <Label fx:id="message" text=" " />
                 </HBox>
             </VBox>
         </HBox>
