--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/login.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/login.fxml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<?import com.SEApp.app.components.*?>
-<VBox alignment="CENTER"
-      prefHeight="239.0"
-      prefWidth="243.0"
-      spacing="20.0"
-      stylesheets="@../Style/main.css"
-      xmlns="http://javafx.com/javafx/21"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.SEApp.app.controller.Login">
-    <fx:include source="../components/Header.fxml"/>
-    <Label fx:id="title" styleClass="h1" text="Login as member" />
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-<!--    <Header />-->
-    <Label styleClass="h1" text="Login" />
-    <Label text="Your login" />
-    <TextField fx:id="email"  />
-    <Label text="Your password" />
-    <PasswordField fx:id="password" />
-    <Button onAction="#onLogin" text="Login" />
-
-    <HBox alignment="CENTER" spacing="10.0">
-            <Label text="Enter your email and password to login" fx:id="error"/>
-    </HBox>
-
-
-</VBox>
+<SplitPane dividerPositions="0.38294314381270905" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.Login">
+  <items>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="228.0" style="-fx-background-color: #E0FCFC;">
+         <children>
+            <ImageView fitHeight="249.0" fitWidth="214.0" layoutX="6.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#handleHomeButton">
+               <image>
+                  <Image url="@../Images/substrack-logo.png"/>
+               </image>
+            </ImageView>
+            <Label layoutX="6.0" layoutY="306.0" prefHeight="54.0" prefWidth="201.0" />
+         </children></AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="331.0" style="-fx-background-color: #FFA60E;">
+         <children>
+            <Label fx:id="title" layoutX="98.0" layoutY="48.0" prefHeight="30.0" prefWidth="305.0" text="Login">
+               <font>
+                  <Font name="DejaVu Sans Condensed Bold" size="25.0" />
+               </font>
+            </Label>
+            <Label layoutX="27.0" layoutY="168.0" text="Email" />
+            <Label layoutX="15.0" layoutY="251.0" text="Password" />
+            <TextField layoutX="98.0" layoutY="164.0" prefHeight="24.0" prefWidth="207.0" promptText="email@email.com" />
+            <TextField layoutX="98.0" layoutY="247.0" prefHeight="24.0" prefWidth="207.0" promptText="your password" />
+            <Button layoutX="154.0" layoutY="314.0" mnemonicParsing="false" onAction="#onLogin" style="-fx-background-color: #24C7E6;" text="Log In" />
+            <Hyperlink layoutX="35.0" layoutY="353.0" prefHeight="22.0" prefWidth="333.0" text="Don’t have an account? Register here" onAction="#handleRegisterButton"/>
+         </children></AnchorPane>
+  </items>
+</SplitPane>
