--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/ManagerialSubscription.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/ManagerialSubscription.fxml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="767.0" prefWidth="1068.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.ManagerialSubscriptionController">
+<VBox prefHeight="839.0" prefWidth="1177.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.ManagerialSubscriptionController">
     <fx:include source="../components/Header.fxml" />
     <HBox alignment="CENTER" stylesheets="@../Style/main.css">
         <Label styleClass="h1" text="Subscription management of the user :" />
         <Label fx:id="memberLabel" styleClass="h1" text="Member name" />
     </HBox>
-    <HBox alignment="CENTER" prefHeight="405.0" prefWidth="874.0" stylesheets="@../Style/main.css">
+    <HBox alignment="CENTER" prefHeight="662.0" prefWidth="1177.0" stylesheets="@../Style/main.css">
         <VBox alignment="TOP_CENTER" minWidth="350">
-            <ScrollPane fx:id="paymentTypePane" minWidth="350.0" prefHeight="186.0" prefWidth="350.0">
+            <ScrollPane fx:id="paymentTypePane" minWidth="290.0" prefHeight="532.0" prefWidth="394.0">
             <content>
                   <Label styleClass="h1" text="Payment type" />
             </content></ScrollPane>
+             <Label prefHeight="74.0" prefWidth="168.0" text="Payment type : " underline="true" />
         </VBox>
-        <VBox alignment="CENTER" fillWidth="false" minWidth="158.0" prefHeight="375.0" prefWidth="158.0" spacing="20.0">
-            <Button fx:id="subscribeButton" mnemonicParsing="false" onAction="#subscribe" text="Subscribe" />
-            <Label fx:id="subscriptionLabel" alignment="TOP_CENTER" prefHeight="62.0" prefWidth="158.0" text="You are currently subscribe to : 1 with the payment type 1" textOverrun="CLIP" wrapText="true" />
-            <Button fx:id="unsubscribeButton" mnemonicParsing="false" onAction="#onUnsubscribe" text="Unsubscribe" />
+        <VBox alignment="CENTER" fillWidth="false" minWidth="158.0" prefHeight="498.0" prefWidth="158.0" spacing="20.0">
+            <Button fx:id="subscribeButton" mnemonicParsing="false" onAction="#subscribe" style="-fx-background-color: #86D174;" text="Subscribe" />
+            <Label fx:id="subscriptionLabel" alignment="TOP_CENTER" prefHeight="62.0" prefWidth="114.0" text="You are currently subscribe to : 1 with the payment type 1" textOverrun="CLIP" wrapText="true" />
             <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="158.0">
-                <Label text="Payment type : " underline="true" />
                 <Label fx:id="paymentTypeLabel" text=" " />
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-                <Label text="Plan : " underline="true" />
                 <Label fx:id="planLabel" text=" " />
             </HBox>
+            <Button fx:id="unsubscribeButton" mnemonicParsing="false" onAction="#onUnsubscribe" style="-fx-background-color: #FF0020;" text="Unsubscribe" />
         </VBox>
         <VBox alignment="TOP_CENTER" minWidth="350" prefHeight="335.0" prefWidth="406.0">
             <Label styleClass="h1" text="Plans" />
-            <ScrollPane fx:id="plansPane" minWidth="350.0" />
+            <ScrollPane fx:id="plansPane" minWidth="350.0" prefHeight="492.0" prefWidth="406.0" />
+             <Label prefHeight="91.0" prefWidth="160.0" text="Plan : " underline="true" />
         </VBox>
     </HBox>
 </VBox>
