--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/MemberSubscription.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/MemberSubscription.fxml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="475.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.MemberSubscriptionController">
-    <fx:include source="../components/Header.fxml"/>
-    <HBox alignment="CENTER" prefHeight="405.0" prefWidth="874.0" stylesheets="@../Style/main.css">
-        <VBox alignment="TOP_CENTER" minWidth="350">
-            <Label styleClass="h1" text="Payment type"/>
-            <ScrollPane fx:id="paymentTypePane" minWidth="350.0"/>
+<VBox prefHeight="756.0" prefWidth="1122.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SEApp.app.controller.MemberSubscriptionController">
+    <fx:include source="../components/Header.fxml" />
+   <Label alignment="TOP_CENTER" graphicTextGap="12.0" prefHeight="25.0" prefWidth="1141.0" style="-fx-background-color: white;" styleClass="h1" stylesheets="@../Style/main.css" text="My subscriptions" textAlignment="CENTER">
+      <font>
+         <Font name="DejaVu Sans Condensed Bold" size="13.0" />
+      </font>
+   </Label>
+    <HBox alignment="CENTER" prefHeight="694.0" prefWidth="1210.0" style="-fx-background-color: white;" stylesheets="@../Style/main.css">
+        <VBox alignment="TOP_CENTER" minWidth="350" style="-fx-background-color: white;">
+            <Label styleClass="h1" text="Payment type" />
+            <ScrollPane fx:id="paymentTypePane" minWidth="307.0" prefHeight="454.0" prefWidth="417.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="158.0">
+                <Label prefHeight="16.0" prefWidth="150.0" text="Payment type : " underline="true" />
+                <Label fx:id="paymentTypeLabel" text=" " />
+            </HBox>
         </VBox>
         <VBox alignment="CENTER" fillWidth="false" minWidth="158.0" prefHeight="375.0" prefWidth="158.0" spacing="20.0">
-            <Button fx:id="subscribeButton" mnemonicParsing="false" text="Subscribe" onAction="#subscribe"/>
-            <Label fx:id="subscriptionLabel" alignment="TOP_CENTER" prefHeight="62.0" prefWidth="158.0"
-                   text="You are currently subscribe to : 1 with the payment type 1" textOverrun="CLIP"
-                   wrapText="true"/>
-            <Button fx:id="unsubscribeButton" mnemonicParsing="false" text="Unsubscribe" onAction="#onUnsubscribe"/>
-            <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="158.0">
-                <Label text="Payment type : " underline="true"/>
-                <Label text=" " fx:id="paymentTypeLabel"/>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-                <Label text="Plan : " underline="true"/>
-                <Label text=" " fx:id="planLabel"/>
-            </HBox>
+            <Button fx:id="subscribeButton" mnemonicParsing="false" onAction="#subscribe" style="-fx-background-color: #86D174;" text="Subscribe" />
+            <Label fx:id="subscriptionLabel" alignment="TOP_CENTER" prefHeight="62.0" prefWidth="135.0" text="You are currently subscribe to : 1 with the payment type 1" textOverrun="CLIP" wrapText="true" />
+            <Button fx:id="unsubscribeButton" mnemonicParsing="false" onAction="#onUnsubscribe" style="-fx-background-color: #FF0020;" text="Unsubscribe" />
+             <Label text="Last payment : " />
 
             <HBox alignment="TOP_CENTER">
-                <Button mnemonicParsing="false" text="Pay" onAction="#pay"/>
-                <Label text="Last payment : "/>
-                <Label text=" " fx:id="lastPaymentLabel"/>
+                <Label fx:id="lastPaymentLabel" text=" " />
             </HBox>
+             <Button mnemonicParsing="false" onAction="#pay" style="-fx-background-color: #FFA60E;" text="Pay" />
         </VBox>
-        <VBox alignment="TOP_CENTER" minWidth="350">
-            <Label styleClass="h1" text="Plans"/>
-            <ScrollPane fx:id="plansPane" minWidth="350.0"/>
+        <VBox alignment="TOP_CENTER" minWidth="350" style="-fx-background-color: white;">
+            <Label styleClass="h1" text="Plans" />
+            <ScrollPane fx:id="plansPane" minWidth="325.0" prefHeight="448.0" prefWidth="371.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                <Label text="Plan : " underline="true" />
+                <Label fx:id="planLabel" text=" " />
+            </HBox>
         </VBox>
     </HBox>
 </VBox>
