--- a/SubscriptApp/src/main/resources/com/SEApp/app/view/PlanAccessManagement.fxml
+++ b/SubscriptApp/src/main/resources/com/SEApp/app/view/PlanAccessManagement.fxml
@@ -11,7 +11,7 @@
             <ScrollPane fx:id="planPane" minWidth="350.0" prefHeight="175.0" prefWidth="350.0" />
         </VBox>
         <VBox alignment="CENTER" fillWidth="false" minWidth="158.0" prefHeight="375.0" prefWidth="158.0" spacing="20.0">
-            <Button mnemonicParsing="false" onAction="#save" text="Save accesses" />
+            <Button mnemonicParsing="false" onAction="#save" style="-fx-background-color: #86D174;" text="Save accesses" />
             <Label fx:id="message" text=" " />
         </VBox>
         <VBox alignment="TOP_CENTER" minWidth="350">
